--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "lint": "eslint . --fix --format=node_modules/eslint-formatter-pretty --quiet"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "eslint": "^4.9.0",
+    "moment": "^2.19.1",
     "react": "16.0.0-beta.5",
+    "react-naive-highly-customizable-action-sheet": "^1.1.2",
     "react-native": "0.49.3",
+    "react-native-actionsheet": "^2.3.0",
+    "react-native-camera": "^0.10.0",
     "react-native-cli": "^2.0.1",
+    "react-native-device-info": "^0.12.1",
     "react-native-easy-toast": "^1.0.9",
+    "react-native-htmlview": "^0.12.1",
+    "react-native-image-crop-picker": "^0.18.1",
     "react-native-image-picker": "^0.26.7",
+    "react-native-pull": "^2.0.2",
     "react-native-pullrefresh-scrollview": "^1.1.3",
+    "react-native-refreshable-listview": "^2.0.0-beta4",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-share": "^1.0.23",
     "react-native-storage": "^0.2.2",
     "react-native-swRefresh": "^1.2.3",
@@ -21,19 +33,7 @@
     "react-native-vector-icons": "^4.4.2",
     "react-native-video": "^2.0.0",
     "react-native-wechat": "^1.9.9",
-    "react-navigation": "^1.0.0-beta.15",
-    "crypto-js": "^3.1.9-1",
-    "eslint": "^4.9.0",
-    "moment": "^2.19.1",
-    "react-naive-highly-customizable-action-sheet": "^1.1.2",
-    "react-native-actionsheet": "^2.3.0",
-    "react-native-camera": "^0.10.0",
-    "react-native-device-info": "^0.12.1",
-    "react-native-htmlview": "^0.12.1",
-    "react-native-image-crop-picker": "^0.18.1",
-    "react-native-pull": "^2.0.2",
-    "react-native-refreshable-listview": "^2.0.0-beta4",
-    "react-native-scrollable-tab-view": "^0.8.0"
+    "react-navigation": "^1.0.0-beta.15"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
