--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,7 +90,7 @@ def enableSeparateBuildPerCPUArchitecture = false
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion 23
@@ -147,14 +147,14 @@ android {
 
 dependencies {
     compile project(':react-native-image-picker')
-    compile project(':react-native-wechat')
+    compile project(':RCTWeChat')
     compile project(':react-native-share')
     compile project(':react-native-video')
     compile project(':react-native-device-info')
     compile project(':react-native-image-crop-picker')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile "com.facebook.react:react-native:+"
     compile project(':react-native-vector-icons')
 }
 
