--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,11 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        manifestPlaceholders = [
+                    GETUI_APP_ID : "FVJsSFRlCw8daG9yzx9yE9",
+                    GETUI_APP_KEY : "JgAJJwZI4O6duPKqqZ0kb1",
+                    GETUI_APP_SECRET : "ApOUan5Cyh8RWEKK5GL7F8"
+                ]
     }
 
     signingConfigs {
@@ -158,6 +163,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"
     compile project(':react-native-vector-icons')
+    compile project(':react-native-getui')
 }
 
 // Run this once to be able to run the application with BUCK
