--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -60,6 +60,11 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
+
+        <meta-data android:name="PUSH_APPID" android:value="${GETUI_APP_ID}" />
+        <meta-data android:name="PUSH_APPKEY" android:value="${GETUI_APP_KEY}" />
+        <meta-data android:name="PUSH_APPSECRET" android:value="${GETUI_APP_SECRET}" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
