--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-native-cli": "^2.0.1",
     "react-native-device-info": "^0.12.1",
     "react-native-easy-toast": "^1.0.9",
+    "react-native-getui": "^1.1.18",
     "react-native-htmlview": "^0.12.1",
     "react-native-image-crop-picker": "^0.18.1",
     "react-native-image-picker": "^0.26.7",
+    "react-native-loader": "^1.2.1",
     "react-native-pull": "^2.0.2",
     "react-native-pullrefresh-scrollview": "^1.1.3",
     "react-native-refreshable-listview": "^2.0.0-beta4",
