--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "GetuiConfigure": "node node_modules/react-native-getui/GetuiConfiguration.js",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "lint": "eslint . --fix --format=node_modules/eslint-formatter-pretty --quiet"
@@ -27,6 +28,7 @@
     "react-native-pull": "^2.0.2",
     "react-native-pullrefresh-scrollview": "^1.1.3",
     "react-native-refreshable-listview": "^2.0.0-beta4",
+    "react-native-refreshlist": "^1.0.3",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-share": "^1.0.23",
     "react-native-storage": "^0.2.2",
