--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-actionsheet": "^2.3.0",
     "react-native-camera": "^0.10.0",
     "react-native-cli": "^2.0.1",
+    "react-native-datepicker": "^1.6.0",
     "react-native-device-info": "^0.12.1",
     "react-native-easy-toast": "^1.0.9",
     "react-native-getui": "^1.1.18",
