--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-vector-icons": "^4.4.2",
     "react-native-video": "^2.0.0",
     "react-native-wechat": "^1.9.9",
-    "react-navigation": "^1.0.0-beta.15"
+    "react-navigation": "^1.0.0-beta.15",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
