--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-wechat')
+    compile project(':react-native-camera')
     compile project(':react-native-image-picker')
     compile project(':RCTWeChat')
     compile project(':react-native-share')
