--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,7 +94,7 @@ def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
     manifestPlaceholders = [
@@ -111,8 +111,16 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
-
+        multiDexEnabled true
     }
+
+    dexOptions {
+
+            incremental true
+
+            javaMaxHeapSize "4g"
+
+        }
 
     signingConfigs {
             release {
@@ -157,7 +165,6 @@ dependencies {
     compile project(':react-native-wechat')
     compile project(':react-native-camera')
     compile project(':react-native-image-picker')
-    compile project(':RCTWeChat')
     compile project(':react-native-share')
     compile project(':react-native-video')
     compile project(':react-native-device-info')
@@ -168,6 +175,8 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-getui')
 }
+
+
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
