--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-share": "^1.0.23",
     "react-native-storage": "^0.2.2",
     "react-native-swRefresh": "^1.2.3",
+    "react-native-swiper": "^1.5.13",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^4.4.2",
     "react-native-video": "^2.0.0",
