修改今日建议页面同时播放视频的bug

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -162,6 +162,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-orientation')
     compile project(':react-native-wechat')
     compile project(':react-native-camera')
     compile project(':react-native-image-picker')
